# purifly

./: README.md  pyproject.toml  test.py
purifly/: core.py  error.py  monad.py  test.py
purifly/datasets/: dataset.py  features.py
